Fixed alignment of tools

--- a/maquetado/scss/content-layout.scss
+++ b/maquetado/scss/content-layout.scss
@@ -11,8 +11,6 @@
       margin-bottom: 50px;
 
       .techs-container {
-        align-self: center;
-        align-content: center;
         display: flex;
         flex-wrap: wrap;
         justify-content: flex-start;
